--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "id": "7037b24e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "import logging"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "dc483ad7",
    "metadata": {},
    "outputs": [],
@@ -43,52 +44,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "bff952c7",
+   "execution_count": 34,
+   "id": "3c98566e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of weather stations: 40\n",
-      "First station: Meetstation Arcen\n",
-      "Temperature: 14.4 °C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "# Example usage\n",
-    "if __name__ == \"__main__\":\n",
-    "    buienradar_data = get_buienradar_data()\n",
-    "    if buienradar_data:\n",
-    "        # print general weather info\n",
-    "        actual = buienradar_data.get(\"actual\", {})\n",
-    "        stationmeasurements = actual.get(\"stationmeasurements\", [])\n",
-    "\n",
-    "        print(\"Number of weather stations:\", len(stationmeasurements))\n",
-    "        if stationmeasurements:\n",
-    "            first_station = stationmeasurements[0]\n",
-    "            print(f\"First station: {first_station.get('stationname')}\")\n",
-    "            print(f\"Temperature: {first_station.get('temperature')} °C\")"
+    "def get_connection(db_name=\"buienradar_weather.db\"):\n",
+    "    conn = sqlite3.connect(db_name)\n",
+    "    conn.execute(\"PRAGMA foreign_keys = ON;\")\n",
+    "    return conn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "62bae3f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Create SQLite database and table\n",
-    "def setup_database(db_name=\"buienradar_weather.db\"):\n",
-    "    conn = sqlite3.connect(db_name)\n",
+    "# Step 1: Create database schema\n",
+    "def setup_database(conn):\n",
     "    cursor = conn.cursor()\n",
     "\n",
-    "    # Enable foreign key support (must be set per connection)\n",
-    "    cursor.execute(\"PRAGMA foreign_keys = ON;\")\n",
-    "\n",
+    "    # Station table — use stationid from Buienradar as PRIMARY KEY (no AUTOINCREMENT)\n",
     "    cursor.execute(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS weather_stations (\n",
     "            stationid INTEGER PRIMARY KEY,\n",
@@ -99,6 +77,7 @@
     "        )\n",
     "    \"\"\")\n",
     "\n",
+    "    # Measurements table — link stationid as foreign key\n",
     "    cursor.execute(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS weather_station_measurements (\n",
     "            measurementid INTEGER PRIMARY KEY AUTOINCREMENT,\n",
@@ -112,53 +91,13 @@
     "            precipitation REAL,\n",
     "            sunpower REAL,\n",
     "            stationid INTEGER,\n",
-    "            FOREIGN KEY (stationid) REFERENCES weather_stations (stationid)\n",
+    "            FOREIGN KEY (stationid) REFERENCES weather_stations(stationid)\n",
     "                ON UPDATE CASCADE\n",
     "                ON DELETE CASCADE\n",
     "        )\n",
     "    \"\"\")\n",
-    "\n",
-    "    conn.commit()\n",
-    "    return conn"
+    "    conn.commit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "52fa603d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🗄️ Setting up database...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Connection at 0x1dfc3db5e40>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"🗄️ Setting up database...\")\n",
-    "conn = setup_database()\n",
-    "conn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c98566e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "fc8401af",
    "metadata": {},
    "outputs": [
@@ -183,27 +122,27 @@
        " 'lat': 51.5,\n",
        " 'lon': 6.2,\n",
        " 'regio': 'Venlo',\n",
-       " 'timestamp': '2025-10-22T13:40:00',\n",
+       " 'timestamp': '2025-10-22T14:00:00',\n",
        " 'weatherdescription': 'Zwaar bewolkt',\n",
        " 'iconurl': 'https://cdn.buienradar.nl/resources/images/icons/weather/30x30/c.png',\n",
        " 'fullIconUrl': 'https://cdn.buienradar.nl/resources/images/icons/weather/96x96/C.png',\n",
        " 'graphUrl': 'https://www.buienradar.nl/nederland/weerbericht/weergrafieken/c',\n",
-       " 'winddirection': 'ZW',\n",
-       " 'temperature': 14.6,\n",
-       " 'groundtemperature': 14.7,\n",
-       " 'feeltemperature': 14.6,\n",
-       " 'windgusts': 2.6,\n",
-       " 'windspeed': 1.4,\n",
-       " 'windspeedBft': 1,\n",
-       " 'humidity': 79.0,\n",
+       " 'winddirection': 'WZW',\n",
+       " 'temperature': 14.9,\n",
+       " 'groundtemperature': 15.0,\n",
+       " 'feeltemperature': 14.9,\n",
+       " 'windgusts': 3.7,\n",
+       " 'windspeed': 1.8,\n",
+       " 'windspeedBft': 2,\n",
+       " 'humidity': 77.0,\n",
        " 'precipitation': 0.0,\n",
-       " 'sunpower': 214.0,\n",
+       " 'sunpower': 239.0,\n",
        " 'rainFallLast24Hour': 0.2,\n",
        " 'rainFallLastHour': 0.0,\n",
-       " 'winddirectiondegrees': 233}"
+       " 'winddirectiondegrees': 243}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,99 +158,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "430b71e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cursor = conn.cursor()\n",
-    "cursor.execute(\"\"\"\n",
-    "    INSERT INTO weather_stations (stationid, stationname, lat, lon, regio)\n",
-    "    VALUES (?, ?, ?, ?, ?)\n",
-    "\"\"\", (\n",
-    "    stations[0].get(\"stationid\"),\n",
-    "    stations[0].get(\"stationname\"),\n",
-    "    stations[0].get(\"lat\"),\n",
-    "    stations[0].get(\"lon\"),\n",
-    "    stations[0].get(\"regio\")\n",
-    "    )\n",
-    ")\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "f84ccd93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cursor = conn.cursor()\n",
-    "cursor.execute(\"\"\"\n",
-    "    INSERT INTO weather_station_measurements ( timestamp, temperature, groundtemperature, feeltemperature, windgusts, windspeedBft, humidity, precipitation, sunpower, stationid)\n",
-    "    VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
-    "\"\"\", (\n",
-    "    stations[0].get(\"timestamp\"),\n",
-    "    stations[0].get(\"temperature\"),\n",
-    "    stations[0].get(\"groundtemperature\"),\n",
-    "    stations[0].get(\"feeltemperature\"),\n",
-    "    stations[0].get(\"windgusts\"),\n",
-    "    stations[0].get(\"humidity\"),\n",
-    "    stations[0].get(\"windspeedBft\"),\n",
-    "    stations[0].get(\"precipitation\"),\n",
-    "    stations[0].get(\"sunpower\"),\n",
-    "    stations[0].get(\"stationid\")\n",
-    "    )\n",
-    ")\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "034ab27e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insert_station_data(conn, data):\n",
+    "# Step 2: Insert or update stations\n",
+    "def insert_stations(conn, data):\n",
     "    cursor = conn.cursor()\n",
-    "\n",
-    "    # Enable foreign keys\n",
-    "    cursor.execute(\"PRAGMA foreign_keys = ON;\")\n",
-    "\n",
-    "    # Get list of stations from JSON\n",
     "    stations = data.get(\"actual\", {}).get(\"stationmeasurements\", [])\n",
     "\n",
-    "    # Keep track of existing station IDs to avoid duplicates\n",
-    "    # (Optional: you can skip this if you always clear the tables first)\n",
-    "    cursor.execute(\"SELECT stationname, stationid FROM weather_stations\")\n",
-    "    existing_stations = {row[0]: row[1] for row in cursor.fetchall()}\n",
+    "    for s in stations:\n",
+    "        cursor.execute(\"\"\"\n",
+    "            INSERT INTO weather_stations (stationid, stationname, lat, lon, regio)\n",
+    "            VALUES (?, ?, ?, ?, ?)\n",
+    "            ON CONFLICT(stationid) DO UPDATE SET\n",
+    "                stationname=excluded.stationname,\n",
+    "                lat=excluded.lat,\n",
+    "                lon=excluded.lon,\n",
+    "                regio=excluded.regio;\n",
+    "        \"\"\", (\n",
+    "            s.get(\"stationid\"),\n",
+    "            s.get(\"stationname\"),\n",
+    "            s.get(\"lat\"),\n",
+    "            s.get(\"lon\"),\n",
+    "            s.get(\"regio\")\n",
+    "        ))\n",
+    "\n",
+    "    conn.commit()\n",
+    "    print(f\"✅ Inserted/updated {len(stations)} stations.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "0fbda13e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = get_connection()\n",
+    "setup_database(conn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9cd85428",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Inserted/updated 40 stations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "insert_stations(conn, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b7ff2e21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Insert measurements linked by stationid\n",
+    "def insert_measurements(conn, data):\n",
+    "    cursor = conn.cursor()\n",
+    "    stations = data.get(\"actual\", {}).get(\"stationmeasurements\", [])\n",
     "\n",
     "    for s in stations:\n",
-    "        stationname = s.get(\"stationname\")\n",
-    "        lat = s.get(\"lat\")\n",
-    "        lon = s.get(\"lon\")\n",
-    "        regio = s.get(\"regio\") if \"regio\" in s else None  # optional field\n",
-    "\n",
-    "        # Insert station only if it doesn't exist\n",
-    "        if stationname in existing_stations:\n",
-    "            stationid = existing_stations[stationname]\n",
-    "        else:\n",
-    "            cursor.execute(\"\"\"\n",
-    "                INSERT INTO weather_stations (stationname, lat, lon, regio)\n",
-    "                VALUES (?, ?, ?, ?)\n",
-    "            \"\"\", (stationname, lat, lon, regio))\n",
-    "            stationid = cursor.lastrowid\n",
-    "            existing_stations[stationname] = stationid\n",
-    "\n",
-    "        # Insert measurement\n",
     "        cursor.execute(\"\"\"\n",
     "            INSERT INTO weather_station_measurements\n",
-    "            (temperature, groundtemperature, feeltemperature, windgusts, windspeedBft,\n",
+    "            (timestamp, temperature, groundtemperature, feeltemperature, windgusts, windspeedBft,\n",
     "             humidity, precipitation, sunpower, stationid)\n",
-    "            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+    "            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
     "        \"\"\", (\n",
-    "            s.get(\"temperature\"),\n",
+    "            s.get(\"timestamp\"),\n",
+    "            s.get(\"temperature\"),  \n",
     "            s.get(\"groundtemperature\"),\n",
     "            s.get(\"feeltemperature\"),\n",
     "            s.get(\"windgusts\"),\n",
@@ -319,46 +246,30 @@
     "            s.get(\"humidity\"),\n",
     "            s.get(\"precipitation\"),\n",
     "            s.get(\"sunpower\"),\n",
-    "            stationid\n",
+    "            s.get(\"stationid\")\n",
     "        ))\n",
     "\n",
-    "    # Commit everything in a single transaction\n",
     "    conn.commit()\n",
-    "    print(f\"✅ Inserted {len(stations)} station measurements into the database.\")\n",
-    "\n"
+    "    print(f\"✅ Inserted {len(stations)} station measurements.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fbda13e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cd85428",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7ff2e21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "ef65f65a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Inserted 40 station measurements.\n"
+     ]
+    }
+   ],
+   "source": [
+    "insert_measurements(conn, data)"
+   ]
   },
   {
    "cell_type": "code",
