--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2fe4a33f",
+   "metadata": {},
+   "source": [
+    "# Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a78f6e1",
+   "metadata": {},
+   "source": [
+    "The goal of this notebook is to answer the different data analysis questions on the Buienradar Weather Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b82ab1e0",
+   "metadata": {},
+   "source": [
+    "#### Import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ef9553d5",
@@ -14,6 +38,14 @@
     "\n",
     "# Now you can import helper\n",
     "from helper import get_connection, run_sql_script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a80a791",
+   "metadata": {},
+   "source": [
+    "#### Q5 Which weather station recorded the highest temperature?"
    ]
   },
   {
@@ -37,6 +69,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e42a5da2",
+   "metadata": {},
+   "source": [
+    "#### Q6 What is the average temperature?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "1c93383b",
@@ -57,6 +97,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ba20acb",
+   "metadata": {},
+   "source": [
+    "#### Q7 What is the station with the biggest difference between feel temperature and the actual temperature?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "42bc3f46",
@@ -74,6 +122,14 @@
     "conn = get_connection(\"../buienradar_weather.db\")\n",
     "highest_temp_diff_station = run_sql_script(conn, \"../sql/Q7_highest_temperature_diff_station.sql\")\n",
     "print(\"Station with the highest temperature difference between real and feel:\", highest_temp_diff_station[0][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a86dbea",
+   "metadata": {},
+   "source": [
+    "#### Q8 Which weather station is located in the North Sea?"
    ]
   },
   {
