--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "conn = get_connection(\"../buienradar_weather.db\")\n",
     "highest_temp_station = run_sql_script(conn, \"../sql/Q5_highest_temperature_station.sql\")\n",
-    "print(\"Station with the highest temperature:\", highest_temp_station[0][0])\n"
+    "print(\"Station with the highest temperature:\", highest_temp_station[0][0])"
    ]
   },
   {
